Multi Language & Log Out & UI düzenlemeleri yapıldı

--- a/InternetBankaciligi.MVC/Views/Home/Index.cshtml
+++ b/InternetBankaciligi.MVC/Views/Home/Index.cshtml
@@ -13,12 +13,11 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>xxxBank</title>
+    <title>EHB Bank</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
     <!-- Favicons -->
-    <link href="assets/img/favicon.png" rel="icon">
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
     <!-- Google Fonts -->
@@ -43,7 +42,7 @@
         <div class="container d-flex justify-content-between">
 
             <div class="logo">
-                <h1><a href="index.html">xxxBank</a></h1>
+                <h1><a href="index.html">EHB Bank</a></h1>
             </div>
 
             <nav id="navbar" class="navbar">
@@ -71,7 +70,7 @@
             <div class="hero-info" data-aos="zoom-in" data-aos-delay="100">
                 <h2>@Localizer["Giris"]<br><span />@Localizer["Giris2"]</h2>
                 <div>
-                    <a href=@Url.Action("Index", "Register") class="btn-get-started scrollto">@Localizer["buton"]</a>
+                    <a href=@Url.Action("Register", "Login") class="btn-get-started scrollto">@Localizer["buton"]</a>
                 </div>
             </div>
 
@@ -214,7 +213,7 @@
 
         <div class="container">
             <div class="copyright">
-                &copy; Copyright <strong>xxxBank</strong>. All Rights Reserved
+                &copy; Copyright <strong>EHB Bank</strong>. All Rights Reserved
             </div>
             <div class="credits">
 
