--- a/InternetBankaciligi.MVC/Views/Login/Index.cshtml
+++ b/InternetBankaciligi.MVC/Views/Login/Index.cshtml
@@ -8,42 +8,40 @@
 @inject IStringLocalizer<InternetBankaciligi.MVC.Controllers.LoginController> Localizer
 
 @model InternetBankaciligi.Entities.Dtos.SignInUserDto;
-
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<title>EHB Bank</title>
+
 <div class="container">
     <div class="row justify-content-center">
-        <div class="col-lg-9">
-            <div class="card shadow-lg border-0 rounded-lg mt-5 col-md-6">
-                <div class="card-header"><h3 class="text-center font-weight-light my-4"><span class="fas fa-house-user"></span> @Localizer["giris_yap"]</h3></div>
+        <div class="col-lg-5">
+            <div class="card shadow-lg border-0 rounded-lg mt-5">
+                <div class="card-header"><h3 class="text-center font-weight-light my-4"><span class="fas fa-house-user"></span>@Localizer["giris_yap"]</h3></div>
                 <div class="card-body">
                     @using (Html.BeginForm("SignIn", "Login", FormMethod.Post))
                     {
-
-                        <div class="col-lg-6">
-                            <div class="form-sample">
-                                <div class="form-group">
-                                    <p><b>@Localizer["tc_kimlik"]</b></p>
-                                    @Html.TextBoxFor(x => x.TCNo, new { @class = "form-control" })<br />
-                                </div>
-                                <div class="form-group">
-                                    <p><b>@Localizer["kullanici_sifresi"]</b></p>
-                                    @Html.TextBoxFor(x => x.UserPassword, new { @lass = "form-control", type = "Password" })<br />
-                                </div>
+                        <div class="form-sample">
+                            <div class="form-group">
+                                <p><b>@Localizer["tc_kimlik"]</b></p>
+                                @Html.TextBoxFor(x => x.TCNo, new { @class = "form-control" })<br />
                             </div>
-
+                            <div class="form-group">
+                                <p><b>@Localizer["kullanici_sifresi"]</b></p>
+                                @Html.TextBoxFor(x => x.UserPassword, new { @class = "form-control", type = "Password" })<br />
+                            </div>
+                        </div>
+                        <div class="text-center">
                             <button class="btn btn-info">@Localizer["giris_yap"]</button>
-
+                        </div><br />
+                        <div class="text-center form-group">
+                            <p>@Localizer["anasayfa_donus"] <a href="@Url.Action("Index","Home")">@Localizer["tikla"]</a></p>
                         </div>
                     }
-                    <div class="card-footer text-center">
-                        <button class="btn btn-primary" type="button" onclick="location.href='@Url.Action("Register", "Login")'"><span class="fas fa-sign-in-alt"></span> @Localizer["musteri_ol"]</button>
-                    </div>
                 </div>
-                <div class="col-lg-6" data-aos="fade-right">
-                    <img src="assets/img/about-extra-1.svg" class="img-fluid" alt="">
+                <div class="card-footer text-center">
+                    <button class="btn btn-primary" type="button" onclick="location.href='@Url.Action("Register", "Login")'"><span class="fas fa-sign-in-alt"></span> @Localizer["musteri_ol"]</button>
+                    @*<button class="btn btn-primary" type="button" onclick="location.href='@Url.Action("Index", "UserPage")'" /><span class="fas fa-sign-in-alt"></span> Kayıt Ol</button>*@
                 </div>
             </div>
-
         </div>
     </div>
 </div>
