--- a/InternetBankaciligi.MVC/Views/Login/Register.cshtml
+++ b/InternetBankaciligi.MVC/Views/Login/Register.cshtml
@@ -10,6 +10,8 @@
 <link href="~/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 <link href="~/assets/css/userlogin.css" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<title>EHB Bank</title>
+
 
 <div class="container">
     <div class="row justify-content-center">
@@ -37,6 +39,9 @@
                                 @Html.TextBoxFor(x => x.UserPassword, new { @class = "form-control", placeholder = "Parola", type = "Password" })<br />
                             </div>
                         </div>
+                        <div class="text-center form-group">
+                            <p>@Localizer["anasayfa_donus"] <a href="@Url.Action("Index","Home")">@Localizer["tikla"]</a></p>
+                        </div><br />
                         <div class="text-center" style="background-color:white">
                             <button class="btn btn-info">@Localizer["musteri_ol"]</button>
                         </div>
