--- a/InternetBankaciligi.MVC/Views/Login/Index.cshtml
+++ b/InternetBankaciligi.MVC/Views/Login/Index.cshtml
@@ -22,11 +22,11 @@
                         <div class="form-sample">
                             <div class="form-group">
                                 <p><b>@Localizer["tc_kimlik"]</b></p>
-                                @Html.TextBoxFor(x => x.TCNo, new { @class = "form-control" })<br />
+                                @Html.TextBoxFor(x => x.TCNo, new { @class = "form-control", @required = "required" })<br />
                             </div>
                             <div class="form-group">
                                 <p><b>@Localizer["kullanici_sifresi"]</b></p>
-                                @Html.TextBoxFor(x => x.UserPassword, new { @class = "form-control", type = "Password" })<br />
+                                @Html.TextBoxFor(x => x.UserPassword, new { @class = "form-control", type = "Password", @required = "required" })<br />
                             </div>
                         </div>
                         <div class="text-center">
@@ -41,6 +41,17 @@
                     <button class="btn btn-primary" type="button" onclick="location.href='@Url.Action("Register", "Login")'"><span class="fas fa-sign-in-alt"></span> @Localizer["musteri_ol"]</button>
                     @*<button class="btn btn-primary" type="button" onclick="location.href='@Url.Action("Index", "UserPage")'" /><span class="fas fa-sign-in-alt"></span> Kayıt Ol</button>*@
                 </div>
+
+                @if(ViewBag.res != null){
+                    @if (ViewBag.res == -1)
+                    {
+                    <script type="text/javascript">
+                        window.onload = function () {
+                            alert("Lütfen Bilgilerinizi Kontrol Ediniz.");
+                        };
+                    </script>
+                        }
+                    }
             </div>
         </div>
     </div>
