--- a/InternetBankaciligi.MVC/Views/Login/Register.cshtml
+++ b/InternetBankaciligi.MVC/Views/Login/Register.cshtml
@@ -24,19 +24,19 @@
                         <div class="form-sample">
                             <div class="form-group">
                                 <p><b>@Localizer["tc_kimlik"]</b></p>
-                                @Html.TextBoxFor(x => x.TCNo, new { @class = "form-control" })<br />
+                                @Html.TextBoxFor(x => x.TCNo, new { @class = "form-control", @required = "required" })<br />
                             </div>
                             <div class="form-group">
                                 <p><b>@Localizer["Ad"]</b></p>
-                                @Html.TextBoxFor(x => x.Name, new { @class = "form-control" })<br />
+                                @Html.TextBoxFor(x => x.Name, new { @class = "form-control", @required = "required" })<br />
                             </div>
                             <div class="form-group">
                                 <p><b>@Localizer["Soyad"]</b></p>
-                                @Html.TextBoxFor(x => x.Surname, new { @class = "form-control" })<br />
+                                @Html.TextBoxFor(x => x.Surname, new { @class = "form-control", @required = "required" })<br />
                             </div>
                             <div class="form-group">
                                 <p><b>@Localizer["kullanici_sifresi"]</b></p>
-                                @Html.TextBoxFor(x => x.UserPassword, new { @class = "form-control", placeholder = "Parola", type = "Password" })<br />
+                                @Html.TextBoxFor(x => x.UserPassword, new { @class = "form-control", placeholder = "Parola", type = "Password", @required = "required" })<br />
                             </div>
                         </div>
                         <div class="text-center form-group">
