--- a/InternetBankaciligi.MVC/Views/Varliklar/Index.cshtml
+++ b/InternetBankaciligi.MVC/Views/Varliklar/Index.cshtml
@@ -150,8 +150,9 @@
                 <!-- Content wrapper -->
                 <div class="content-wrapper">
                     <!-- Content -->
-                    <button onclick="location.href='@Url.Action("Logout", "Login")'" class="btn btn-dark" style="float: right; margin-bottom: 5px; margin-right: 15px">@Localizer["cikis_yap"] </button>
-
+                    <div style="float: right;">
+                        <button onclick="location.href='@Url.Action("Logout", "Login")'" class="btn btn-dark" style="float: right; margin-bottom: 5px; margin-right: 15px; width: 200px;">@Localizer["cikis_yap"] </button>
+                    </div>
                     <div class="container-xxl flex-grow-1 container-p-y">
 
 
@@ -159,7 +160,6 @@
                         @if (Model.CheckAccountPartial == true)
                         {
                             <div class="card">
-                                <h9 class="card-header"> @Localizer["mevcut_bakiye"]: @Model.AmountTypeWallets.Select(x => x.TotalWelthOfWallet).FirstOrDefault()</h9>
                                 <h9 class="card-header"> @Localizer["hesap_iban"]: @Model.UserAccounts.Select(x => x.Iban).FirstOrDefault()</h9>
 
                                 <div>
@@ -170,7 +170,6 @@
                                         <thead>
                                             <tr>
                                                 <th> @Localizer["para_adi"]</th>
-                                                <th> @Localizer["para_miktari"]</th>
                                                 <th> @Localizer["toplam_para_fiyati"]</th>
                                             </tr>
                                         </thead>
@@ -181,9 +180,6 @@
                                                 <tr>
                                                     <td id="tdCoinName"><i class="fab fa-angular fa-lg text-danger me-3"></i> <strong>@amountsTypes.AmountTypeName</strong></td>
                                                     <td> @amountsTypes.AmountOfAmountType</td>
-                                                    <td>
-                                                        @amountsTypes.TotalWelthOfAmountType
-                                                    </td>
                                                 </tr>
                                             }
                                         </tbody>
@@ -231,8 +227,6 @@
                                                         @using (Html.BeginForm("DrawingTransaction", "Varliklar", FormMethod.Post))
                                                         {
                                                             <p style="color: black"><b> @Localizer["para_seciniz"]</b></p>@*, @readonly = "readonly"*@
-
-                                                            <p style="color: black"><b> @Localizer["para_seciniz"]</b></p>@*, @readonly = "readonly"*@
                                                             @Html.DropDownListFor(m => m.CreateTransactionDto.AmountTypeName,
                                                                 (List<SelectListItem>)ViewBag.dgr, new { @class = "form-control", id = "txtPrice", @onchange = "DdlChange(this.value,this.id)" })<br />
                                                             <br />
@@ -251,8 +245,6 @@
                                                         @using (Html.BeginForm("TransferTransaction", "Varliklar", FormMethod.Post))
                                                         {
                                                             <br />
-                                                            <p style="color: black"><b>@Localizer["para_seciniz"]</b></p>@*, @readonly = "readonly"*@
-
                                                             <p style="color: black"><b>@Localizer["para_seciniz"]</b></p>@*, @readonly = "readonly"*@
                                                             @Html.DropDownListFor(m => m.CreateTransactionDto.AmountTypeName,
                                                                 (List<SelectListItem>)ViewBag.dgr, new { @class = "form-control", id = "txtPrice", @onchange = "DdlChange(this.value,this.id)" })<br />
